test/arrays/deitz/part4/test_array_rankchange_error.good
test_array_rankchange_error.chpl:2: error: halt reached - array slice out of bounds in dimension 1: 1..6
